# go-catalyst

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: pull.yml
dashboard/: app.py
docs/: MEMO.md
docs/superpowers/plans/: 2026-06-23-catalyst-tracker.md
docs/superpowers/specs/: 2026-06-23-catalyst-tracker-design.md
migrations/: env.py
migrations/versions/: 5b920c8b243e_add_youtube_video_fields.py  df92740afa81_initial_schema.py
src/catalyst/: __init__.py  config.py
src/catalyst/analysis/: __init__.py  metrics.py
src/catalyst/db/: models.py  session.py
src/catalyst/ingest/: __init__.py  base.py  pipeline.py  youtube.py
src/catalyst/jobs/: __init__.py  run_cycle.py
src/catalyst/recommend/: __init__.py  classify.py  engine.py  gemini.py
src/catalyst/roi/: __init__.py  funnel.py
tests/: conftest.py  test_classify.py  test_config.py  test_engine.py  test_funnel.py  test_metrics.py  test_models.py  test_pipeline.py  test_youtube.py
