[project]
name = "catalyst"
version = "0.1.0"
description = "Live content-analytics tracker (Catalyst GTM build challenge)"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/catalyst"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
